Added FastAPI file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.115.0"
+fastapi = {extras = ["standard"], version = "^0.115.0"}
 gradio = "^4.44.0"
+transformers = "^4.44.2"
+huggingface-hub = "^0.25.0"
 
 
 [build-system]
